--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@aws-sdk/abort-controller": "^3.226.0",
     "@aws-sdk/client-s3": "^3.241.0",
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "yargs": "^17.6.2"
   }
 }
