--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node upload.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "longgt",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@aws-sdk/abort-controller": "^3.226.0",
     "@aws-sdk/client-s3": "^3.241.0",
     "axios": "^1.2.2",
+    "axios-retry": "^3.3.1",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
